--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,12 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font) !important;
@@ -348,6 +354,7 @@ body.dark-theme {
   -webkit-filter: blur(0.9px) sepia(0.5) brightness(0.9);
           filter: blur(0.9px) sepia(0.5) brightness(0.9);
   width: 100%;
+  height: 70vh;
 }
 
 .hero__item {
@@ -761,6 +768,9 @@ body.dark-theme {
   .hero {
     position: relative;
     z-index: -1;
+  }
+  .hero__img {
+    height: auto;
   }
   .subhero {
     margin-top: -240px;
